# OWASP-QA-System

./: .gitignore  README.md  owasp_qa.py  pyproject.toml
notebooks/: RAG_notebook.ipynb
